--- a/06_13_GAN_03.ipynb
+++ b/06_13_GAN_03.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1LybOhWk3cAeBst4ccPRxY3eAxZ5Y_R1G",
-      "authorship_tag": "ABX9TyPJfbe2OLX5cBeiVujeJE4G",
+      "authorship_tag": "ABX9TyOJb5uj3CXOZrZjV1I/mw1T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -418,7 +418,7 @@
         "# OPTIONAL\n",
         "!pip install wandb -qqq\n",
         "import wandb\n",
-        "wandb.login(key='')"
+        "wandb.login(key='9e59c0e5f929ee5a223fead436cba53be4f90e1a')"
       ],
       "metadata": {
         "colab": {
